Fri Sep  4 20:40:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (round): added declaration.  [ruby-dev:39222]

Fri Sep  4 09:52:58 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: forgot to mention about new looser splats.

Wed Sep  2 13:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (domain_check): simplified.

Sun Aug 30 15:12:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep): makes new room if object space is full of
	  finalized objects and has no free objects.  [ruby-dev:39201]

Sat Aug 29 07:03:26 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_s_show_help): fixed the comment
	  of WIN32OLE.ole_show_help usage.

Wed Aug 26 19:17:47 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/test/unit/collector/dir.rb: $: bug fix. [ruby-core:24115]

Mon Aug 24 21:33:34 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, test/rss/test_maker_2.0.rb: fix a bug
	that RSS Maker doesn't accept 'false' as guid's isPermaLink.
	Reported by Joe Holt. Thanks!!!

Sat Aug 22 12:08:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit.run=, Test::Unit.run?): fixed rdoc.
	  [ruby-core:25034]

Fri Aug 21 00:39:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (opt_call_args): fix to pass "make test-all".

	* parse.y (arg_value): fix to pass "make test".

Fri Aug 14 19:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/curses/curses.c ({curses,window}_addstr),
	  ext/openssl/ossl_x509store.c (ossl_x509store_add_{file,path}):
	  replaced deprecated funtion.

Fri Aug 14 14:03:46 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in: only check pthread.h in case of --enable-pthread
	  backport from trunk. [ruby-talk:343878] [ruby-core:23577]

Thu Aug 13 16:20:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in (MAKEDIRS): used MKDIR_P instead of
	  as_mkdir_p.  [ruby-dev:39063]
