@@ -1,5 +1,6 @@
 require 'test/unit'
 require 'tmpdir'
+require 'tempfile'
 
 class TestIO < Test::Unit::TestCase
   def mkcdtmpdir
@@ -16,5 +17,21 @@ class TestIO < Test::Unit::TestCase
     w.close
     assert_equal("\377", r.gets("\377"), "[ruby-dev:24460]")
     r.close
+  end
+
+  def make_tempfile
+    t = Tempfile.new("foo")
+    t.binmode
+    t.puts "foo"
+    t.puts "bar"
+    t.puts "baz"
+    t.close
+    t
+  end
+
+  def test_binmode_after_closed
+    t = make_tempfile
+    t.close
+    assert_raise(IOError) {t.binmode}
   end
 end
